Ajustes para agregar columna en tabla y titulos en index

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <img src="img/foto.jpg" alt="Foto Perfil" title="Foto Perfil" width="250px">
             
             <article>
+                <h3>Perfil</h3>
                 <p>
                     Soy programador con experiencia de 4 años en desarrollo de aplicaciones de escritorio con los lenguajes:<br/>
                     <strong>C#, Visual Basic y Power Builder</strong><br/>
@@ -68,6 +69,7 @@
             </article>
         </section>
         
+        <br/><br/>
         <footer>
             <strong>&#169;Derechos Reservados</strong>
             <ul>
